# temporary

./: README.md  note.txt
cmake/: mathlib.hpp.in
cmaketest/basic/: CMakeLists.txt  main  main.cpp
cmaketest/basic/begin/: CMakeLists.txt  main.cpp
cmaketest/basic/next/: CMakeLists.txt  main  main.cpp
cmaketest/packaging/mathlib/src/: basicmath.cpp
cmaketest/packaging/testapp1/: CMakeLists.txt  main.cpp
cmaketest/packaging/v1_link_with_fix_path_of_lib/mathlib/: CMakeLists.txt  note.txt
cmaketest/packaging/v1_link_with_fix_path_of_lib/mathlib/src/: basicmath.hpp
cmaketest/packaging/v1_link_with_fix_path_of_lib/testapp1/: CMakeLists.txt
cmaketest/packaging/v2_1_create_package_link_with_find_pacakge_withbuildfolder/mathlib/: CMakeLists.txt
cmaketest/packaging/v2_1_create_package_link_with_find_pacakge_withbuildfolder/mathlib/mathlibbin/include/: basicmath.hpp
cmaketest/packaging/v2_1_create_package_link_with_find_pacakge_withbuildfolder/testapp1/: CMakeLists.txt
cmaketest/packaging/v3_build_header_lib_without_using_interface_for_headerlib/mathlib/: CMakeLists.txt
cmaketest/packaging/v3_build_header_lib_without_using_interface_for_headerlib/testapp1/: CMakeLists.txt
cmaketest/packaging/vxerror_notcopyingconfigfile/mathlib/: CMakeLists.txt
mathlib/: CMakeLists.txt
